gitops/ocp-network-policies/netpol-allow-from-kube-apiserver-operator.yaml
---
# This is needed for namespaces that are running pods of Mutating and Validating Webhooks
# In general, this is not needed for application namespaces, but it is not harmful, as 
# only the kube-apiserver-operator running on its namespace will be able to use it.
# It could happen that you install a namespaced operator that defines a webhook in your namespace
# and in that case, you would need it.
# More information here: https://access.redhat.com/solutions/6964520
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-kube-apiserver-operator
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver-operator
      podSelector:
        matchLabels:
          app: kube-apiserver-operator
  podSelector: {}
  policyTypes:
  - Ingress
