gitops/ocp-network-policies/netpol-allow-from-openshift-monitoring.yaml
---
# To allow access from Prometheus (Infra and user-workload)
# More info here: https://access.redhat.com/solutions/6247871
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
