gitops/ocp-network-policies/netpol-allow-same-namespace.yaml
---
# This is the main restricting policy, it denies traffic from outside the ns
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
